--- a/HallPass/www/index.html
+++ b/HallPass/www/index.html
@@ -45,6 +45,10 @@
 
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
     <script src="lib/angular-messages/angular-messages.min.js"></script>
+
+    <!--Google map -->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAdWuNLJKXIO9NF41qYCRXHazCK-dU_yoM"></script>
+
   </head>
   <body ng-app="HallPass">
       <ion-nav-bar class="bar-positive" align-title="center">
